# bnomial-archive

./: .gitignore  Cargo.toml  Readme.md  questions.md  result.md  temp.txt
.github/workflows/: generate-result.yml
src/: defaults.rs  lib.rs  main.rs  today_question.rs  write_file.rs
